--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ packaging==24.1
 pluggy==1.5.0
 pyparsing==3.1.2
 pytest==8.3.2
+PyYAML==6.0.1
 requests==2.32.3
 requests-toolbelt==1.0.0
+responses==0.25.3
 urllib3==2.2.2
