--- a/test/resources/test_config.yaml
+++ b/test/resources/test_config.yaml
@@ -3,7 +3,7 @@ url: "https://myurl.com"
 commands:
   - kind: "triggerCallbackOnChangedState" # provides name, xpath, kind + old and new value for templating
     name: "changedState"
-    xpath: "//a[@class='some class']"
+    xpath: "//a[@class='some class']/text()"
 callback:
   url: "https://example.com/callback" # callback url
   method: "POST" # method of the callback, has to be provided as uppercase string
