--- a/chart/website-webhook/values.yaml
+++ b/chart/website-webhook/values.yaml
@@ -2,13 +2,13 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
-
 image:
-  repository: nginx
+  repository: ghcr.io/jo-hoe/website-webhook
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+
+probePort: 8000
 
 imagePullSecrets: []
 nameOverride: ""
