--- a/chart/website-webhook/templates/deployment.yaml
+++ b/chart/website-webhook/templates/deployment.yaml
@@ -51,17 +51,17 @@ spec:
             {{- toYaml .Values.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-          {{- with .Values.volumeMounts }}
           volumeMounts:
             - mountPath: /run/config
               name: {{ include "website-webhook.fullname" . }}-config-volume
               readOnly: true
-            {{- toYaml . | nindent 12 }}
-          {{- end }}
-      {{- with .Values.volumes }}
       volumes:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        - name: {{ include "website-webhook.fullname" . }}-config-volume
+          configMap:
+            name: {{ include "website-webhook.fullname" . }}-config
+            items:
+              - key: config.yaml
+                path: config.yaml
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
