--- a/charts/website-webhook/templates/tests/test-connection.yaml
+++ b/charts/website-webhook/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "website-webhook.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "website-webhook.fullname" . }}:{{ .Values.probePort }}']
   restartPolicy: Never
