--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run unittests
-        run: python -m unittest --verbose
+      - name: Run pytest
+        uses: pavelzw/pytest-action@v2
