--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ iniconfig==2.0.0
 lxml==5.2.2
 packaging==24.1
 pluggy==1.5.0
+prometheus_client==0.20.0
 pyparsing==3.1.2
 pytest==8.3.2
 PyYAML==6.0.1
