--- a/charts/website-webhook/templates/deployment.yaml
+++ b/charts/website-webhook/templates/deployment.yaml
@@ -40,11 +40,16 @@ spec:
             - name: http
               containerPort: {{ .Values.probePort }}
               protocol: TCP
+            - name: {{ .Values.service.portName }}
+              containerPort: {{ .Values.service.port }}
+              protocol: TCP
           env:
             - name: CONFIG_PATH
               value: /run/config/config.yaml
             - name: PORT
               value: "{{ .Values.probePort }}"
+            - name: METRICS_PORT
+              value: "{{ .Values.service.port }}"
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
