using cron job definition

--- a/test/resources/test_config.yaml
+++ b/test/resources/test_config.yaml
@@ -1,4 +1,5 @@
-interval: "4m" # interval describing how often the function is run, default 1h
+cron: "4 * * * *" # cron describing how often the function is run, default 1h
+executeOnStartUp: false # if set to true, the function will be executed on startup, default true
 url: "https://myurl.com"
 commands:
   - kind: "triggerCallbackOnChangedState" # provides name, xpath, kind + old and new value for templating
