--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 cloudscraper==1.2.71
 colorama==0.4.6
+croniter==3.0.3
 idna==3.7
 iniconfig==2.0.0
 lxml==5.2.2
@@ -10,8 +11,11 @@ pluggy==1.5.0
 prometheus_client==0.20.0
 pyparsing==3.1.2
 pytest==8.3.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 requests-toolbelt==1.0.0
 responses==0.25.3
+six==1.16.0
 urllib3==2.2.2
