--- a/charts/website-webhook/templates/configmap.yaml
+++ b/charts/website-webhook/templates/configmap.yaml
@@ -6,7 +6,8 @@ metadata:
     {{- include "website-webhook.labels" . | nindent 4 }}
 data:
   config.yaml: |-
-    interval: {{ .Values.interval }}
+    cron: {{ .Values.cron }}
+    executeOnStartUp: {{ .Values.executeOnStartUp }}
     url: {{ .Values.url }}
     callback:
       url: {{ .Values.callback.url }}
