added javascript support

--- a/charts/website-webhook/templates/configmap.yaml
+++ b/charts/website-webhook/templates/configmap.yaml
@@ -12,6 +12,7 @@ data:
     callback:
       url: "{{ .Values.callback.url }}"
       method: "{{ .Values.callback.method }}"
+      enableJavaScript: "{{ .Values.callback.enableJavaScript }}"
       headers:
         {{- toYaml .Values.callback.headers | nindent 8 }}
       body:
