--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
+attrs==24.2.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 cloudscraper==1.2.71
 colorama==0.4.6
 croniter==3.0.3
+h11==0.14.0
 idna==3.8
 iniconfig==2.0.0
 lxml==5.3.0
+outcome==1.3.0.post0
 packaging==24.1
 pluggy==1.5.0
 prometheus_client==0.21.0
+pycparser==2.22
 pyparsing==3.1.4
+PySocks==1.7.1
 pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -17,5 +23,13 @@ PyYAML==6.0.2
 requests==2.32.3
 requests-toolbelt==1.0.0
 responses==0.25.3
+selenium==4.25.0
 six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.27.0
+trio-websocket==0.11.1
+typing_extensions==4.12.2
 urllib3==2.2.3
+websocket-client==1.8.0
+wsproto==1.2.0
