moved prometheus collector in another path/namespace

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal",
             "env": {
-                "CONFIG_PATH": "${workspaceFolder}/dev/rssconfig.yaml"
+                "CONFIG_PATH": "${workspaceFolder}/dev/config.yaml"
             }
         }
     ]
