--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ packaging==25.0
 pluggy==1.6.0
 prometheus_client==0.22.1
 pycparser==2.22
+Pygments==2.19.1
 pyparsing==3.2.3
 PySocks==1.7.1
 pytest==8.4.0
@@ -24,6 +25,7 @@ requests==2.32.4
 requests-toolbelt==1.0.0
 responses==0.25.7
 selenium==4.33.0
+selenium-crawler==0.1.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
