--- a/compose.yaml
+++ b/compose.yaml
@@ -16,37 +16,36 @@ services:
       - 8010:8010
     volumes:
       - ./dev:/run/config/:ro
+    environment:
+      # Storage backend configuration
+      # Options: "memory" (default) or "redis"
+      - STORAGE_BACKEND=${STORAGE_BACKEND:-memory}
+      - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_DB=${REDIS_DB:-0}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
+      - REDIS_KEY_PREFIX=${REDIS_KEY_PREFIX:-website-webhook}
+    depends_on:
+      - redis
+    profiles:
+      - redis
 
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
+  website-webhook-memory:
+    build:
+      context: .
+    ports:
+      - 8000:8000
+      - 8010:8010
+    volumes:
+      - ./dev:/run/config/:ro
+    environment:
+      - STORAGE_BACKEND=memory
+    profiles:
+      - default
 
+  redis:
+    image: redis:8-alpine
+    ports:
+      - 6379:6379
+    profiles:
+      - redis
