--- a/test/resources/test_config.yaml
+++ b/test/resources/test_config.yaml
@@ -1,4 +1,4 @@
-cron: "4 * * * *" # cron describing how often the function is run, default 1h
+schedule: "4 * * * *" # cron describing how often the function is run, default 1h
 executeOnStartUp: false # if set to true, the function will be executed on startup, default true
 url: "https://myurl.com"
 enableJavaScript: true
