--- a/charts/website-webhook/templates/configmap.yaml
+++ b/charts/website-webhook/templates/configmap.yaml
@@ -6,8 +6,8 @@ metadata:
     {{- include "website-webhook.labels" . | nindent 4 }}
 data:
   config.yaml: |-
-    cron: "{{ .Values.cron }}"
-    executeOnStartUp: {{ .Values.executeOnStartUp | default true }}
+    schedule: "{{ .Values.job.schedule }}"
+    executeOnStartUp: {{ .Values.job.executeOnStartUp | default true }}
     enableJavaScript: {{ .Values.enableJavaScript | default false }}
     url: "{{ .Values.url }}"
     callback:
