--- a/charts/website-webhook/templates/cronjob.yaml
+++ b/charts/website-webhook/templates/cronjob.yaml
@@ -56,7 +56,7 @@ spec:
                 - name: REDIS_DB
                   value: "{{ .Values.storage.redis.db }}"
                 - name: REDIS_KEY_PREFIX
-                  value: "{{ .Values.storage.redis.keyPrefix }}"
+                  value: "{{ .Values.storage.redis.keyPrefix | default .Release.Name }}"
                 {{- if .Values.storage.redis.existingSecret }}
                 - name: REDIS_PASSWORD
                   valueFrom:
