added ttl for jobs

--- a/charts/website-webhook/templates/cronjob.yaml
+++ b/charts/website-webhook/templates/cronjob.yaml
@@ -15,6 +15,7 @@ spec:
         {{- include "website-webhook.labels" . | nindent 8 }}
     spec:
       backoffLimit: {{ .Values.job.backoffLimit }}
+      ttlSecondsAfterFinished: {{ .Values.job.ttlSecondsAfterFinished }}
       template:
         metadata:
           annotations:
