--- a/charts/website-webhook/values.yaml
+++ b/charts/website-webhook/values.yaml
@@ -15,6 +15,8 @@ job:
   failedJobsHistoryLimit: 1
   # -- number of attempts for failed jobs before marking as failed (includes initial attempt, so 6 = 1 attempt + 5 retries)
   backoffLimit: 2
+  # -- time to live after job completion in seconds (cleanup), default is 1 day
+  ttlSecondsAfterFinished: 86400
 
 # -- defines if javascript should be executed during the run
 enableJavaScript: false
