--- a/charts/website-webhook/templates/cronjob.yaml
+++ b/charts/website-webhook/templates/cronjob.yaml
@@ -6,6 +6,9 @@ metadata:
     {{- include "website-webhook.labels" . | nindent 4 }}
 spec:
   schedule: "{{ .Values.job.schedule }}"
+  {{- if .Values.job.timeZone }}
+  timeZone: "{{ .Values.job.timeZone }}"
+  {{- end }}
   successfulJobsHistoryLimit: {{ .Values.job.successfulJobsHistoryLimit }}
   failedJobsHistoryLimit: {{ .Values.job.failedJobsHistoryLimit }}
   concurrencyPolicy: Forbid
